feat(#290): make codebase java-8 compatible